<resources>
    <string name="app_name">Bitaste</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_user_home">Farhan</string>
    <string name="ads">What do you want to eat today?</string>
    <string name="discount_50">Discount 50%</string>
    <string name="order_your_food_through_my_app_and_get_your_discount">Order your food through my app and get your discount!</string>
    <string name="rice">Rice</string>
    <string name="noodles">Noodles</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="food_menu_list">Food Menu List</string>
    <string name="_4_8">4.8</string>
    <string name="rp_50_000">Rp 50.000</string>
    <string name="nama_makanan">Nama Makanan</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="account">Account</string>
    <string name="list">List</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_top">Phone Number</string>
    <string name="email">Email</string>
    <string name="email_top">Email</string>
    <string name="password">Password</string>
    <string name="password_top">Password</string>
    <string name="username">Username</string>
    <string name="username_top">Username</string>
    <string name="profile">Profile</string>
    <string name="cart_detail">Cart</string>
    <string name="rp_0">Rp. 0</string>
    <string name="total_price">Total Price</string>
    <string name="checkout">Checkout</string>
    <string name="not_registered_yet_register_here">Not registered yet? Register Here</string>
    <string name="log_in">Log In</string>
    <string name="name_hint">Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="add_to_cart" formatted="false">Tambah ke Keranjang - Rp. %d</string>
    <string name="rp_20_000">Rp. 20.000</string>
    <string name="location">Location</string>
    <string name="see_location">See Location</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="open">Open</string>
    <string name="_23">23</string>
    <string name="cart_is_empty">Cart is Empty</string>
    <string name="add_notes_here">Add notes here</string>
    <string name="hint_name">Your name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_register">Register</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_error_new_name_must_be_different">The new name cannot be the same as the current name</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_logout">Logout</string>
    <string name="no_data_text">No Data</string>
    <string name="metode_pembayaran">Metode Pembayaran</string>
    <string name="ambil_sendiri">Ambil Sendiri</string>
    <string name="dikirim">Dikirim</string>
    <string name="payment_method">Payment Method</string>
    <string name="cash">Cash</string>
    <string name="e_wallet">E-Wallet</string>
    <string name="shopping_summary">Shopping Summary</string>
    <string name="total_pembayaran">Total Pembayaran</string>
    <string name="rp">Rp</string>
    <string name="pesan">Pesan</string>
    <string name="_0">0</string>
    <string name="catatan">Catatan</string>
    <string name="total_qty">x%s</string>
    <string name="total_quantity">x%s</string>

</resources>