<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/home"
        android:id="@+id/bottom_ic_home"
        android:icon="@drawable/ic_home"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/cart"
        android:id="@+id/bottom_ic_cart"
        android:icon="@drawable/ic_cart_buttom"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/history"
        android:id="@+id/bottom_ic_history"
        android:icon="@drawable/ic_history"/>
    <item
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/account"
        android:id="@+id/bottom_ic_profile"
        android:icon="@drawable/ic_profile_buttom"/>
</menu>