<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/cv_banner_detail"
      android:layout_width="430dp"
      android:layout_height="310dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/banner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        tools:src="@tools:sample/avatars" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.5"
        android:background="@color/black" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_back"
        tools:ignore="TouchTargetSizeCheck" />
  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/cv_detail_menu"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="200dp"
      android:layout_marginBottom="-10dp"
      app:cardCornerRadius="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="parent">

  </com.google.android.material.card.MaterialCardView>

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_food_name_detail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="26dp"
      android:layout_marginTop="240dp"
      tools:text="@string/nama_makanan"
      android:textColor="@color/ungu_tua"
      android:textSize="22sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_price_detail"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="26dp"
      android:layout_marginTop="270dp"
      android:text="@string/rp_50_000"
      android:textColor="@color/orange_tua"
      android:textSize="22sp"
      android:textStyle="bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.imageview.ShapeableImageView
      android:layout_width="10dp"
      android:layout_height="10dp"
      android:layout_marginStart="26dp"
      android:layout_marginTop="38dp"
      android:src="@drawable/ic_open"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/tv_price_detail" />

  <com.google.android.material.textview.MaterialTextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="46dp"
      android:layout_marginTop="302dp"
      tools:text="@string/open"
      android:textColor="@color/ungu_tua"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <com.google.android.material.textview.MaterialTextView
      android:id="@+id/tv_description"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="40dp"
      android:gravity="start"
      android:padding="20dp"
      tools:text="@string/lorem_ipsum"
      android:textAlignment="gravity"
      android:textColor="@color/ungu_tua"
      android:textSize="12sp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@id/tv_price_detail"
      app:layout_goneMarginStart="26dp" />

  <com.google.android.material.card.MaterialCardView
      android:id="@+id/cv_location"
      android:layout_width="350dp"
      android:layout_height="80dp"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/tv_description">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/outline_location"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/outline_purple">

      <com.google.android.material.imageview.ShapeableImageView
          android:id="@+id/iv_map"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_margin="10dp"
          android:src="@drawable/ic_map"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      <com.google.android.material.textview.MaterialTextView
          android:id="@+id/tv_location"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginStart="10dp"
          android:layout_marginTop="30dp"
          tools:text="@string/location"
          android:textColor="@color/ungu_muda"
          android:textSize="10sp"
          android:textStyle="bold|normal"
          app:layout_constraintStart_toEndOf="@id/iv_map"
          app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
  </com.google.android.material.card.MaterialCardView>

  <LinearLayout
      android:id="@+id/ll_bottom_action"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="8dp"
      android:weightSum="3"
      app:layout_constraintBottom_toBottomOf="parent">

    <TextView
        android:id="@+id/tv_total_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/fl_add_to_cart"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/rp_20_000" />

    <LinearLayout
        android:id="@+id/ll_counter_product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="3">

      <ImageView
          android:id="@+id/iv_minus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:src="@drawable/ic_minus" />

      <TextView
          android:id="@+id/tv_menu_count"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center_vertical"
          android:layout_marginHorizontal="8dp"
          android:layout_weight="1"
          android:textAlignment="center"
          android:textStyle="bold"
          tools:ignore="RtlCompat"
          tools:text="@string/_23"
          android:textColor="@color/orange_tua"/>

      <ImageView
          android:id="@+id/iv_plus"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:maxWidth="240dp"
          android:src="@drawable/ic_plus" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_add_to_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/white"
        android:layout_weight="1"
        tools:text="@string/add_to_cart" />
  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
